--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
       url: https://github.com/oldHarvester/flutter_toolkit.git
   http: ^1.6.0
   vector_graphics: ^1.1.19
+  flutter_cache_manager: ^3.4.1
 
 dev_dependencies:
   flutter_test:
