--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   http: ^1.6.0
   vector_graphics: ^1.1.19
   flutter_cache_manager: ^3.4.1
+  universal_io: ^2.3.1
 
 dev_dependencies:
   flutter_test:
